/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

message NavigationChannelMessage {
  enum Enum {
    NONE = 0x0000;
    STATUS = 0x8003;
    TURN_EVENT = 0x8004;
    DISTANCE_EVENT = 0x8005;
  }
}
