/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "DistanceUnitEnum.proto";

message NavigationDistanceEvent {
  required uint32 meters = 1;
  required uint32 timeToStepSeconds = 2;
  required uint32 distanceToStepMillis = 3;
  required DistanceUnit.Enum distanceUnit = 4;
}
