/* SPDX-License-Identifier: GPL-3.0+ */
/*
 *  This file is part of aasdk library project.
 *  Copyright (C) 2018 f1x.studio (Michal Szwaj)
 */

syntax = "proto2";

import "NavigationTurnTypeEnum.proto";
import "NavigationImageOptionsData.proto";

package aasdk.proto.data;

message NavigationChannel {
  required uint32 minimum_interval_ms = 1;
  required enums.NavigationTurnType.Enum type = 2;
  required NavigationImageOptions image_options = 3;
}
